<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="lookup">Lookup</string>
    <string name="clear">Clear</string>
    <string name="temp_75">Temp: 75</string>
    <string name="_72">72</string>
    <string name="feels_like_78">Feels like: 78</string>
    <string name="clouds">Clouds</string>
    <string name="broken_clouds">broken clouds</string>
</resources>